# data-flux

./: .gitignore  AGENTS.md  Jenkinsfile  Jenkinsfile.local  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
dataflux/: __init__.py  core.py  discovery.py  hf_core.py  ops.py  paired.py  projection.py  sample.py  sources.py  typespec.py
dataflux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataflux/ops/: __init__.py  copy.py  enable.py  image.py  numpy.py  parallel.py  sink.py  stash.py  swap.py  target.py  tee.py  torch.py
dataflux/storage/: base.py  cache.py  directory.py  hdf5.py  intake.py  zarr.py
examples/: advanced_storage_demo.py  basic_pipeline.py  cache_pipeline.py  dataset_split.yaml  discovery_demo.py  hdf5_pipeline.py  intake_pipeline.py  paired_annotations.py  parallel_hdf5_stream.py  parallel_pipeline.py  storage_roundtrip.py  stream_results.h5  test_data.h5
examples/batch_store.zarr/data/: zarr.json
examples/batch_store.zarr/data/c/0/: 0
examples/batch_store.zarr/data/c/1/: 0
examples/batch_store.zarr/data/c/2/: 0
examples/batch_store.zarr/data/c/3/: 0
examples/batch_store.zarr/data/c/4/: 0
examples/batch_store.zarr/data/c/5/: 0
examples/dir_store/000000/: metadata.yaml  sample.npz
examples/dir_store/000001/: metadata.yaml  sample.npz
examples/group_store.zarr/sample_000000/: zarr.json
examples/group_store.zarr/sample_000001/: zarr.json
manifests/datasets/: flux.yaml  joint_flux.yaml
manifests/sources/: dataset_split.yaml  huggingface_source.yaml
notebooks/: 01 - cat_exploration.ipynb
tests/: test_cache.py  test_categories.py  test_coverage_gap.py  test_discovery.py  test_enable.py  test_flux.py  test_from_ops_yaml.py  test_hf_core.py  test_image_ops.py  test_intake.py  test_joint.py  test_lazy_construction.py  test_node_docs.py  test_ops.py  test_paired.py  test_parallel.py  test_parallel_op.py  test_projection.py  test_sources.py  test_storage.py  test_target_ops.py  test_typespec.py
(+6 files in other folders)
