[project]
name = "data-flux"
version = "0.1.0"
description = "Clean, functional data pipelines for ML research and production."
authors = [{ name = "Taidal", email = "info@gearlux.ai" }]
dependencies = [
    "confluid>=0.1.0",
    "log-flow>=0.1.0",
    "numpy",
    "h5py",
    "zarr",
    "torch",
    "typing-extensions",
    "datasets",
    "albumentations"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "Pillow",
    "intake>=2.0",
    "xarray",
]
notebook = [
    "matplotlib",
    "datasets",
    "python-dotenv",
]
vision = [
    "scipy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# CONFLUID-CONFIGURABLE DISCOVERY
# Sources / ops live in separate submodules that `dataflux/__init__.py`
# does not eagerly import. Listing them here makes navigaitor discover
# every ``@configurable`` on bootstrap without hardcoding the list.
[project.entry-points."confluid.configurables"]
dataflux = "dataflux"
dataflux-core = "dataflux.core"
dataflux-sources = "dataflux.sources"
dataflux-ops-parallel = "dataflux.ops.parallel"
dataflux-ops-tee = "dataflux.ops.tee"
dataflux-ops-stash = "dataflux.ops.stash"
dataflux-ops-numpy = "dataflux.ops.numpy"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataflux*"]

[tool.setuptools.package-data]
dataflux = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "h5py.*",
    "PIL.*",
    "zarr.*",
    "intake.*",
    "xarray.*",
]
ignore_missing_imports = true
